<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FSUOrgActivity!</string>
    <string name="app_name">FSUOrg</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="organization_name">Organization</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
	<string name="browse">Browse Organizations</string>
    
</resources>