<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization_name" 
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:paddingTop="20dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingTop="5dp" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" 
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingTop="5dp" />

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/login"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:paddingTop="10dp">
        
        
        <Button
            android:id="@+id/browse"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/browse" />
        
    </TableRow>

</LinearLayout>